monitoring/services.yaml
kind: Service
apiVersion: v1
metadata:
  name: prometheus
spec:
  selector:
    app: prometheus
  ports:
  - name: prometheus
    port: 34610
    targetPort: 9090
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  labels:
    app: grafana
spec:
  ports:
  - name: grafana
    port: 34620
    targetPort: 3000
  selector:
    app: grafana
