monitoring/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - http:
      paths:
      - path: /prometheus
        pathType: Prefix
        backend:
          serviceName: prometheus
          servicePort: 8080

  - http:
      paths:
      - path: /grafana
        pathType: Prefix
        backend:
          serviceName: grafana
          servicePort: 8080
